Fixing some random warnings.